...
  static const String registerUserFormEmailHint = 'user@example.com';
  static const String registerUserFormEmailValidationText = 
  "Please enter a valid email" ;


  static const String homeAppBarTitleText = "Home";
  static const String profileAppBarTitleText = "Profile";

  static const String drawerHomeItemName = "Home";
  static const String drawerProfileItemName = "Profile";
  static const String drawerLogoutItemName = "Logout";
  static const String drawerRegisterItemName = "Register";

  static const String bottomNavHomeItemLabel = "Home";
  static const String bottomNavAddStudentItemLabel = "Add Students";
  static const String bottomNavStudentsItemLabel = "Students";

  static const String welcomeToHomeText = "WELCOME TO HOME";

  static const String studentEditFormNameValidationText = "Please enter name";

  static const String studentEditFormRollValidationText = "Please enter roll";

  static const String errorTryLater = "Error please try again later";
...
