...
            background: const BackgroundWithHomeIcon(),

            stackedChild: Column(
              crossAxisAlignment: CrossAxisAlignment.stretch,
              children: [
                ElevatedFormActionButton(
                  key: const Key("loginButoon"),
                  buttonText: StringConstants.loginButtonText,
                  onPressed: executor.login,
                ),
                const SizedBox(height: 10,),
                SimpleTextButton(
                  key: const Key("needAccountRegisterButton"),
                  onPressed: () => _openRegisterPage(context),
                  text: StringConstants.needAccountButtonText,
                ),
                const SizedBox(height: 10,),
                GreyTextButton(
                  onPressed: () {  },
...
