...
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            const _UserImage(),
            _UserName(user: user,),
            const _UserBio(),
            GoBackElevatedButton(
              key: const Key("goBackButton"),
              onPressed: () => _onGoBackPressed(context)
            ),
          ],
        ),
      ),
    );
...
